--- a/index.html
+++ b/index.html
@@ -3,88 +3,72 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Devon's Personal Site</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Devon Taylor</title>
+  <link rel="stylesheet" href="CSS/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
-  <table cellspacing="20">
-    <tr>
-      <td>
-        <img src="profilepic.jpeg" alt="" width="150" height="150">
-      </td>
-      <td>
-        <h1>Devon Taylor</h1>
-        <p><em>Web Development Student</em></p>
-        <p>I am 27 years old. I reside in Charlotte, North Carolina. I like to listen music.</p>
-      </td>
-    </tr>
-  </table>
+  <div class="top-container">
+    <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+    <h1>I'm Dev</h1>
+    <h2><span class="web-dev">Web Dev</span>, if you will 😉 </h2>
+    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+    <img src="images/mountain.png" alt="mountain-img">
+  </div>
 
-  <hr>
+  <div class="middle-container">
+    <div class="profile">
+      <img class="profile-pic" width="300px" height="300px" src="images/profilepic.jpeg" alt="profile-pic">
+      <h2>Aloha 👋🏾</h2>
+      <p class="into">My name is Dev and I am an aspiring Web Developer.</p>
+    </div>
+  </div>
 
-  <h3>Education</h3>
+    <hr>
 
-  <ul>
-    <li>Burns High School</li>
-    <li>UNC Charlotte</li>
-  </ul>
+  <div>
 
-  <hr>
+    <div class="skills">
+      <h2>My Skills.</h2>
+      <div class="skill-row">
+        <img class="computer-pic" src="images/computer.png" alt="computer-pic">
+        <h3>HTML, CSS, JAVASCRIPT</h3>
+        <p>I earned a certificate of completion for these programming languages through the NuCamp bootcamp.</p>
+      </div>
+    </div>
 
-  <h3>Work Experience</h3>
+      <div class="skill-row">
+        <img class="microsoft-office-pic" src="images/microsoft-office-pic.png" alt="microsoft-office-pic">
+        <h3>Microsoft Office</h3>
+        <p>I have been proficient with Microsoft Office since high school and have been using it ever since.</p>
+      </div>
 
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dates</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2016-2018</td>
-        <td>LabCorp</td>
-      </tr>
-      <tr>
-        <td>2018-2020</td>
-        <td>Atrium Health</td>
-      </tr>
-      <tr>
-        <td>2020-Present</td>
-        <td>Frito Lay</td>
-      </tr>
-    </tbody>
-  </table>
+    </div>
 
-  <hr>
+    <hr>
 
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>HTML</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>CSS</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>JAVASCRIPT</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-    <tr>
-      <td>JAVA</td>
-      <td>⭐️⭐️⭐️⭐️⭐️</td>
-    </tr>
-  </table>
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>Get to know me more and let's work together!</h3>
+      <p class="contact-message">Talk to ya soon 😃</p>
+      <a class="btn" href="mailto:dtaylo88@gmail.com">CONTACT ME</a>
+    </div>
 
-  <hr>
-
-  <a href="hobbies.html">MY HOBBIES</a>
   <br>
-  <a href="contactme.html">CONTACT ME</a>
+
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://twitter.com/demondev_">Twitter</a>
+    <a class="footer-link" href="https://www.github.com/SenseiDev94">Github</a>
+    <p class="copyright">© 2022 Devon Taylor.</p>
+  </div>
+
 
 </body>
 
